test/tests/operators/from_sqs/validation/error_visibility_timeout_negative.txt
error: invalid visibility timeout: -1000000000ns
 --> tests/operators/from_sqs/validation/error_visibility_timeout_negative.tql:5:38
  |
5 | from_sqs "queue", visibility_timeout=-1s
  |                                      ^^^ 
  |
  = hint: visibility timeout must be in the interval [0s, 12h]
